Prevent portrait image from overflowing parent flex item

--- a/_src/assets/styles/_base/_core.scss
+++ b/_src/assets/styles/_base/_core.scss
@@ -1,6 +1,6 @@
 :root {
-  --blend-multiply: #f4c7ee;
-  --blend-lighten: #008fd3;
+  --blend-multiply: #e6625e;
+  --blend-lighten: #15a29c;
 }
 
 html {
